--- a/kodland/blog/templates/blog/inc_post_box.html
+++ b/kodland/blog/templates/blog/inc_post_box.html
@@ -1,11 +1,17 @@
 
+{% load static %}
+
     <div class="col s4">
         <div class="card">
             <p class="light">{{ post.create_date }}</p>
             <img src="">
-            <div class="card-content">
-                <h5 class="center">{{ post.title }}</h5>
-                <p class="light">{{ post.text }}</p>
+            <div class="card-content center">
+                <h5>{{ post.title }}</h5>
+            </div>
+            <div class="card-action">
+                <a class="left" href="#">25 <img src="{% static 'img/like.png' %}" alt="лайков"></a>
+                <a class="center" href="#">25 <img src="{% static 'img/comment.png' %}" alt="комментариев"></a>
+                <a class="right" href="#">25 <img src="{% static 'img/view.png' %}" alt="просмотров"></a>
             </div>
         </div>
     </div>
