--- a/kodland/templates/base.html
+++ b/kodland/templates/base.html
@@ -7,34 +7,90 @@
     <meta charset="UTF-8">
     <title>Блог</title>
     <!--Import Google Icon Font-->
-<!--    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}"  media="screen,projection"/>
 
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&display=swap" rel="stylesheet">
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style type="text/css">
+        h4{
+            color: blue;
+            font-size: 24px;
+            font-family: 'Philosopher', sans-serif;
+        }
+        h5{
+            color: blue;
+            font-size: 36px;
+            font-family: 'Philosopher', sans-serif;
+        }
+        h6{
+            color: blue;
+            font-size: 18px;
+            font-family: 'Philosopher', sans-serif;
+        }
+        nav{
+            background-color: white;
+            color: black;
+            height: 90px;
+            line-height: 90px;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+        nav ul a{
+            color: black;
+            font-size: 24px;
+            font-family: 'Comfortaa', cursive;
+        }
+        nav ul{
+            margin-left: 180px;
+        }
+        .breadcrumb,
+        .breadcrumb:first-child,
+        .breadcrumb:last-child{
+            color: black;
+        }
+        .btn{
+            color: white;
+            background-color: blue;
+        }
+        div.card a{
+            color: gray !important;
+            margin-right: 4px !important;
+        }
+        .input-image {
+            width: 0.1px;
+            height: 0.1px;
+            opacity: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: -1;
+        }
+    </style>
+
 </head>
 
 <body>
 
-    <nav class="white" role="navigation">
+    <nav class="" role="navigation">
         <div class="nav-wrapper container">
             <a href="#" class="brand-logo left">
-                <img class="materialboxed" src="{% static 'img/logo_kodland.png' %}" width="190px" height="72.28px">
+                <img src="{% static 'img/logo_kodland.png' %}" width="190px" height="72.28px">
             </a>
-            <ul class="left">
-                <li><a href="{% url 'blog_post_list' %}">Блог</a></li>
-            </ul>
-            
-            <ul class="right">
-                <li><a href="#"><img src="{% static 'img/email.png' %}" alt="e-mail"></a></li>
-                <li><a href="#"><img src="{% static 'img/Group.png' %}" alt="Group"></a></li>
-                <li><a href="#"><img src="{% static 'img/logout.png' %}" alt="Logout"></a></li>
+            <ul>
+                <li class="left"><a class="breadcrumb" href="{% url 'blog_post_list' %}">Блог</a></li>
+                <li class="right"><a href="#"><img src="{% static 'img/logout.svg' %}" width="32" height="32" alt="Logout"></a></li>
+                <li class="right"><a href="#"><img src="{% static 'img/group.svg' %}" height="74" alt="Group"></a></li>
+                <li class="right"><a href="#"><img src="{% static 'img/email.svg' %}" width="32" height="32" alt="E-mail"></a></li>
             </ul>
         </div>
     </nav>
 
-    <div class="content container">
+    <div class="content">
         {% block content %}
         {% endblock %}
     </div>
